[web]Mod: issue #6009 hide property type on mobile web

--- a/source/web/src/static/styles/project/_imports.less
+++ b/source/web/src/static/styles/project/_imports.less
@@ -182,3 +182,7 @@
         margin-top: -@width/2;
     }
 }
+
+.hiddenOnMobile {
+    display:none;
+}
